# weather-update

./: .gitignore  README.md  pyproject.toml
src/weather_update/: weather.py
tests/: test_weather.py
